--- a/om_mig.html
+++ b/om_mig.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Norrflod</title>
     <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
 <body id="ommig">
   <header id="om-mig-hd">
@@ -19,6 +19,12 @@
     </div>
     <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Bild på vattenfall">
   </header>
+  <nav class="desktop_menu hide-on-phone">
+    <a href="index.html"><div class="desktop_menu_links link-hover">Hem</div></a>
+    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenheter</div></a>
+    <a href="projekt.html"><div class="desktop_menu_links link-hover">Projekt</div></a>
+    <a href="om_mig.html"><div class="desktop_menu_links"  id="current-link">Om mig</div></a>
+  </nav>
     <nav class="menu" aria-label="primary">
       <div class="close-button">
         <i class="material-symbols-outlined">close</i>
@@ -31,18 +37,17 @@
       </div>
     </nav>
   <div class="fade-layer"></div>
-  <img src="img/image0.jpeg" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
-  <section class="ul_div self-center" id="sc1">
-    <h2 class="ul_h2">Kort om mig</h2>
-    <ul>
-      <li>Intresserad av programmering och matte</li>
-      <li>Gillar träning</li>
-      <li>MBTI: INTJ-A</li>
-    </ul>
+  <img src="img/Profilbild_cv.png" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
+  <section id="bubblor_container" id="sc1">
+    <div class="om_mig_bubblor" data-text="Jag älskar matte!"><h3>Matte</h3></div>
+    <div class="om_mig_bubblor" data-text="Programmering är min passion!        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere quae sapiente fugit aliquam autem unde! Minus et recusandae iusto facilis reiciendis, id veritatis."><h3>Programmering</h3></div>
+    <div class="om_mig_bubblor" data-text="Jag tycker om utmanade problem!"><h3>Problemlösning</h3></div>
+    <div class="om_mig_bubblor" data-text="Träning håller mig stark"><h3>Träning</h3></div>
+    <div class="om_mig_bubblor" data-text="Jag gillar det mesta i övrigt!"><h3>Övrigt</h3></div>
   </section>
   <main class="text_sec" id="text-area">
     <h2 class="svart-text">Om mig</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
   </main>
   <footer>
     <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
