--- a/om_mig.html
+++ b/om_mig.html
@@ -38,17 +38,20 @@
     </nav>
   <div class="fade-layer"></div>
   <img src="img/Profilbild_cv.png" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
-  <section id="bubblor_container" id="sc1">
-    <div class="om_mig_bubblor" data-text="Jag älskar matte!"><h3>Matte</h3></div>
-    <div class="om_mig_bubblor" data-text="Programmering är min passion!        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere quae sapiente fugit aliquam autem unde! Minus et recusandae iusto facilis reiciendis, id veritatis."><h3>Programmering</h3></div>
-    <div class="om_mig_bubblor" data-text="Jag tycker om utmanade problem!"><h3>Problemlösning</h3></div>
-    <div class="om_mig_bubblor" data-text="Träning håller mig stark"><h3>Träning</h3></div>
-    <div class="om_mig_bubblor" data-text="Jag gillar det mesta i övrigt!"><h3>Övrigt</h3></div>
+  <h2 class="om-mig-h2 hide-on-desktop">Tryck på bubblorna för mer information</h2>
+  <section id="bubblor_container om_mig_desktop">
+    <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Matte</h2><p>Jag älskar matte! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
+    <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Programmering</h2><p>Programmering är min passion! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
+    <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Problemlösning</h2><p>Jag tycker om utmanade problem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
+    <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Träning</h2><p>Träning håller mig stark Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
+    <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Övrigt</h2><p>Jag gillar det mesta i övrigt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
+
+    <div class="om_mig_bubblor hide-on-desktop" data-text="Jag älskar matte! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore."><h3>Matte</h3></div>
+    <div class="om_mig_bubblor hide-on-desktop" data-text="Programmering är min passion! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere quae sapiente fugit aliquam autem unde! Minus et recusandae iusto facilis reiciendis, id veritatis."><h3>Programmering</h3></div>
+    <div class="om_mig_bubblor hide-on-desktop" data-text="Jag tycker om utmanade problem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore."><h3>Problemlösning</h3></div>
+    <div class="om_mig_bubblor hide-on-desktop" data-text="Träning håller mig stark Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore."><h3>Träning</h3></div>
+    <div class="om_mig_bubblor hide-on-desktop" data-text="Jag gillar det mesta i övrigt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore."><h3>Övrigt</h3></div>
   </section>
-  <main class="text_sec" id="text-area">
-    <h2 class="svart-text">Om mig</h2>
-    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
-  </main>
   <footer>
     <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
       <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
