Färdig med om mig och erfarenheter samt projekt för mobil

--- a/om_mig.html
+++ b/om_mig.html
@@ -21,7 +21,7 @@
   </header>
   <nav class="desktop_menu hide-on-phone">
     <a href="index.html"><div class="desktop_menu_links link-hover">Hem</div></a>
-    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenheter</div></a>
+    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenhet</div></a>
     <a href="projekt.html"><div class="desktop_menu_links link-hover">Projekt</div></a>
     <a href="om_mig.html"><div class="desktop_menu_links"  id="current-link">Om mig</div></a>
   </nav>
@@ -31,15 +31,15 @@
       </div>
       <div id="link-wrapper">
         <a href="index.html"><div class="menu-links link-hover">Hem</div></a>
-        <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenheter</div></a>
+        <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenhet</div></a>
         <a href="projekt.html"><div class="menu-links link-hover">Projekt</div></a>
         <a href="om_mig.html"><div class="menu-links" id="current-link">Om mig</div></a>
       </div>
     </nav>
   <div class="fade-layer"></div>
-  <img src="img/Profilbild_cv.png" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
-  <h2 class="om-mig-h2 hide-on-desktop">Tryck på bubblorna för mer information</h2>
-  <section id="bubblor_container om_mig_desktop">
+  <section class="bubblor_container om_mig_desktop">
+    <img src="img/Profilbild_cv.png" alt="Ansiktsbild" id="ansiktsimg" class="self-center">
+    <h2 class="om-mig-h2 hide-on-desktop">Tryck på bubblorna för mer information</h2>
     <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Matte</h2><p>Jag älskar matte! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
     <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Programmering</h2><p>Programmering är min passion! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
     <div class="om-mig-text hide-on-phone"><h2 class="om-mig-h2">Problemlösning</h2><p>Jag tycker om utmanade problem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor libero omnis sed cum minus accusantium voluptates aspernatur tempora optio tempore.</p></div>
