--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="link-wrapper">
       <a href="index.html"><div class="menu-links" id="current-link">Hem</div></a>
-      <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenheter</div></a>
+      <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenhet</div></a>
       <a href="projekt.html"><div class="menu-links link-hover">Projekt</div></a>
       <a href="om_mig.html"><div class="menu-links link-hover">Om mig</div></a>
     </div>
