--- a/projekt.html
+++ b/projekt.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Norrflod</title>
     <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-      <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    </head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+  </head>
 <body id="projekt">
   <header>
     <div class="menu-button">
@@ -22,7 +22,7 @@
   </header>
   <nav class="desktop_menu hide-on-phone">
     <a href="index.html"><div class="desktop_menu_links link-hover">Hem</div></a>
-    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenheter</div></a>
+    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover">Erfarenhet</div></a>
     <a href="projekt.html"><div class="desktop_menu_links"  id="current-link">Projekt</div></a>
     <a href="om_mig.html"><div class="desktop_menu_links link-hover">Om mig</div></a>
   </nav>
@@ -32,35 +32,35 @@
       </div>
       <div id="link-wrapper">
         <a href="index.html"><div class="menu-links link-hover">Hem</div></a>
-        <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenheter</div></a>
+        <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenhet</div></a>
         <a href="projekt.html"><div class="menu-links" id="current-link">Projekt</div></a>
         <a href="om_mig.html"><div class="menu-links link-hover">Om mig</div></a>
       </div>
     </nav>
     <div class="fade-layer"></div>
-  <main class="main_container" id="pro-grid">
-    <div id="slideshow_container">
-      <img id="slideshow" src="img/lenin-estrada-OI1ToozsKBw-unsplash.jpg" alt="Slideshow Image" />
-      <em>Klicka på bild för bildspel</em>
-    </div>
-    <section class="ul_div self-center" id="prog-sec">
-      <h2 class="ul_h2">Programmeringsspråk</h2>
-      <ul>
-        <li>Python</li>
-        <i class="devicon-python-plain"></i>
-        <li>HTML</li>
-        <i class="devicon-html5-plain"></i>
-        <li>C++</li>
-        <i class="devicon-cplusplus-plain"></i>
-        <li>Ruby</li>
-        <i class="devicon-ruby-plain"></i>
-      </ul>
-    </section>  
-    <section class="text_sec" id="text-area">
-      <h2 class="svart-text">Projekt</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
-    </section>
-  </main>
+  <div id="slideshow_container">
+    <img id="slideshow" src="img/lenin-estrada-OI1ToozsKBw-unsplash.jpg" alt="Slideshow Image" />
+    <em>Klicka på bild för bildspel</em>
+  </div>
+  <section class="ul_div self-center" id="prog-sec">
+    <h2 class="ul_h2">Programmeringsspråk</h2>
+    <ul>
+      <li>Python</li>
+      <li>HTML</li>
+      <li>C++</li>
+      <li>Ruby</li>
+    </ul>
+  </section>
+  <section id="icon_container">
+    <i class="devicon-python-plain"></i>
+    <i class="devicon-html5-plain"></i>
+    <i class="devicon-cplusplus-plain"></i>
+    <i class="devicon-ruby-plain"></i>
+  </section>  
+  <section class="text_sec" id="text-area">
+    <h2 class="svart-text">Projekt</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus facilis alias error. Sed eligendi totam ea amet recusandae accusantium veniam velit aliquid magnam aliquam ut vero possimus corrupti, iste quia ipsam unde architecto accusamus quaerat maxime nisi harum ullam iure? Vitae tempora voluptates dolore commodi atque impedit eligendi ab modi fugit ipsa architecto ut, iusto, quasi quod deleniti fuga quo doloribus molestias nam quisquam eaque? Minus nostrum eos impedit mollitia reprehenderit asperiores sit ipsum vitae, iusto facere facilis eaque commodi maxime velit sapiente praesentium eius ex, molestias quisquam rerum deleniti hic unde quasi iste? Libero, ab. Quia dolorum corrupti exercitationem maxime eius quam tempora expedita sint aperiam quo, voluptas itaque nihil consectetur dolore voluptate ipsam illo asperiores omnis minus aut dolor eveniet.</p><p> Dicta dolor nihil ipsam atque similique hic voluptate iure necessitatibus doloribus voluptatibus nostrum aliquam autem minima, reprehenderit debitis unde omnis quia? Nisi, repudiandae? Tempora voluptates ratione quisquam quas laudantium tenetur fugit. At architecto veniam magni reiciendis dolorum cum facilis blanditiis temporibus, impedit, deserunt possimus incidunt laudantium voluptas asperiores! Molestiae atque itaque cupiditate tempora ut fugiat! Impedit maxime aut natus, tempora iure esse magni temporibus earum odio, quisquam fugit atque repellat reprehenderit assumenda dolor quidem similique voluptas vel necessitatibus!</p>
+  </section>
   <footer>
     <a href="https://www.linkedin.com/in/lucas-norrflod-8b50b531a/">
       <i class="fa fa-linkedin-square biggericon" id="linkedin"></i>
