--- a/erfarenhet.html
+++ b/erfarenhet.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Norrflod</title>
     <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
   </header>
   <nav class="desktop_menu hide-on-phone">
     <a href="index.html"><div class="desktop_menu_links link-hover">Hem</div></a>
-    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover" id="current-link">Erfarenhet</div></a>
+    <a href="erfarenhet.html"><div class="desktop_menu_links link-hover current-link">Erfarenhet</div></a>
     <a href="projekt.html"><div class="desktop_menu_links link-hover">Projekt</div></a>
     <a href="om_mig.html"><div class="desktop_menu_links link-hover">Om mig</div></a>
   </nav>
@@ -31,7 +31,7 @@
       </div>
       <div id="link-wrapper">
         <a href="index.html"><div class="menu-links link-hover">Hem</div></a>
-        <a href="erfarenhet.html"><div class="menu-links" id="current-link">Erfarenhet</div></a>
+        <a href="erfarenhet.html"><div class="menu-links current-link">Erfarenhet</div></a>
         <a href="projekt.html"><div class="menu-links link-hover">Projekt</div></a>
         <a href="om_mig.html"><div class="menu-links link-hover">Om mig</div></a>
       </div>
