--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Norrflod</title>
     <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&"/>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
       <i class="material-symbols-outlined">menu</i>
     </div>
     <picture>
-      <source media="(min-width:501px)" srcset="img/desktop-cover-img-river.jpg" alt="Bild på vattenfall">
+      <source media="(min-width:501px)" srcset="img/desktop-cover-img-river.jpg">
       <img class="phone-background-img" src="img/phone-cover-img-river.jpg" alt="Bild på vattenfall">
     </picture>
     <div class="h1-container">
@@ -29,7 +29,7 @@
       <i class="material-symbols-outlined">close</i>
     </div>
     <div id="link-wrapper">
-      <a href="index.html"><div class="menu-links" id="current-link">Hem</div></a>
+      <a href="index.html"><div class="menu-links current-link">Hem</div></a>
       <a href="erfarenhet.html"><div class="menu-links link-hover">Erfarenhet</div></a>
       <a href="projekt.html"><div class="menu-links link-hover">Projekt</div></a>
       <a href="om_mig.html"><div class="menu-links link-hover">Om mig</div></a>
@@ -39,21 +39,21 @@
   <nav id="main-nav">
     <a href="erfarenhet.html" aria-label="secondary">
       <div class="link-div link-hover">
-        <img src="img/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="restaurang 2" class="hide-on-phone" id="card-img">
+        <img src="img/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Erfarenhet bild" class="hide-on-phone card-img">
         <h2 class="self-center">Erfarenhet</h2>
         <p class="hide-on-phone">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure earum vitae maiores accusantium, consectetur quia vel error. Eveniet, quaerat sequi.</p>  
       </div>
     </a>
     <a href="projekt.html">
       <div class="link-div link-hover">
-        <img src="img/kumpan-electric-SYo5eazBrls-unsplash.jpg" alt="restaurang 2" class="hide-on-phone" id="card-img">
+        <img src="img/kumpan-electric-SYo5eazBrls-unsplash.jpg" alt="Projekt bild" class="hide-on-phone card-img">
         <h2 class="self-center">Projekt</h2>
         <p class="hide-on-phone">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure earum vitae maiores accusantium, consectetur quia vel error. Eveniet, quaerat sequi.</p>  
       </div>
     </a>
     <a href="om_mig.html">
       <div class="link-div link-hover">
-        <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="restaurang 2" class="hide-on-phone" id="card-img">
+        <img src="img/hd-wallpaper-gdb8119592-1920.jpg" alt="Om mig bild" class="hide-on-phone card-img">
         <h2 class="self-center">Om mig</h2>
         <p class="hide-on-phone">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure earum vitae maiores accusantium, consectetur quia vel error. Eveniet, quaerat sequi.</p>  
       </div>
