--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </div>
   </nav>
   <div class="fade-layer"></div>
-  <nav id="main-nav">
-    <a href="erfarenhet.html" aria-label="secondary">
+  <nav id="main-nav" aria-label="secondary">
+    <a href="erfarenhet.html">
       <div class="link-div link-hover">
         <img src="img/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Erfarenhet bild" class="hide-on-phone card-img">
         <h2 class="self-center">Erfarenhet</h2>
